atcoderのコンテスト出た

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,154 +1,10 @@
 {
   "editor.formatOnSave": true,
-  "[cpp]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.wordBasedSuggestions": "off",
-    "editor.suggest.insertMode": "replace",
-    "editor.semanticHighlighting.enabled": true
-  },
-  "github.copilot.enable": {
-    "*": false,
-    "plaintext": false,
-    "markdown": false,
-    "scminput": false
+  "[c]": {
+    "editor.defaultFormatter": "ms-vscode.cpptools"
   },
   "files.associations": {
-    "*.json": "jsonc",
-    "vector": "cpp",
-    "ostream": "cpp",
-    "iomanip": "cpp",
-    "string": "cpp",
-    "iostream": "cpp",
-    "complex": "cpp",
-    "valarray": "cpp",
-    "chrono": "cpp",
-    "cmath": "cpp",
-    "cstdlib": "cpp",
-    "tuple": "cpp",
-    "ios": "cpp",
-    "istream": "cpp",
-    "__config": "cpp",
-    "iosfwd": "cpp",
-    "queue": "cpp",
-    "random": "cpp",
-    "regex": "cpp",
-    "version": "cpp",
-    "map": "cpp"
-  },
-  "latex-workshop.intellisense.package.enabled": true,
-  "latex-workshop.latex.clean.fileTypes": [
-    "*.aux",
-    "*.bbl",
-    "*.blg",
-    "*.idx",
-    "*.ind",
-    "*.lof",
-    "*.lot",
-    "*.out",
-    "*.toc",
-    "*.acn",
-    "*.acr",
-    "*.alg",
-    "*.glg",
-    "*.glo",
-    "*.gls",
-    "*.ist",
-    "*.fls",
-    "*.log",
-    "*.fdb_latexmk",
-    "*.snm",
-    "*.nav",
-    "*.dvi",
-    "*.synctex.gz"
-  ],
-  "latex-workshop.latex.outDir": "output",
-  "latex-workshop.latex.recipes": [
-    {
-      "name": "latexmk",
-      "tools": ["latexmk"]
-    }
-  ],
-  "latex-workshop.latex.tools": [
-    {
-      "name": "latexmk",
-      "command": "latexmk",
-      "args": ["%DOC%", "-file-line-error", "-interaction=nonstopmode"]
-    }
-  ],
-  "[bibtex]": {
-    "editor.tabSize": 2
-  },
-  "[latex]": {
-    "editor.defaultFormatter": "James-Yu.latex-workshop",
-    "editor.suggest.snippetsPreventQuickSuggestions": false,
-    "editor.tabSize": 2
-  },
-  "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter"
-  },
-  "[tex]": {
-    "editor.suggest.snippetsPreventQuickSuggestions": false,
-    "editor.tabSize": 2
-  },
-  "code-runner.executorMap": {
-    "ahk": "autohotkey",
-    "applescript": "osascript",
-    "autoit": "autoit3",
-    "bat": "cmd /c",
-    "c": "cd $dir && gcc $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-    "clojure": "lein exec",
-    "coffeescript": "coffee",
-    "cpp": "cd $dir && g++ -O2 -std=c++17 $fileName && ./a.out",
-    "crystal": "crystal",
-    "dart": "dart",
-    "d": "cd $dir && dmd $fileName && $dir$fileNameWithoutExt",
-    "fsharp": "fsi",
-    "fortran": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-    "fortran-modern": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-    "fortran_fixed-form": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-    "FortranFreeForm": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-    "go": "go run",
-    "groovy": "groovy",
-    "haskell": "runghc",
-    "haxe": "haxe --cwd $dirWithoutTrailingSlash --run $fileNameWithoutExt",
-    "java": "cd $dir && javac $fileName && java $fileNameWithoutExt",
-    "javascript": "node",
-    "julia": "julia",
-    "kit": "kitc --run",
-    "less": "cd $dir && lessc $fileName $fileNameWithoutExt.css",
-    "lisp": "sbcl --script",
-    "lua": "lua",
-    "mojo": "mojo run",
-    "nim": "nim compile --verbosity:0 --hints:off --run",
-    "objective-c": "cd $dir && gcc -framework Cocoa $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-    "ocaml": "ocaml",
-    "pascal": "cd $dir && fpc $fileName && $dir$fileNameWithoutExt",
-    "perl": "perl",
-    "perl6": "perl6",
-    "php": "php",
-    "powershell": "powershell -ExecutionPolicy ByPass -File",
-    "python": "python -u",
-    "r": "Rscript",
-    "racket": "racket",
-    "ruby": "ruby",
-    "rust": "cd $dir && rustc $fileName && $dir$fileNameWithoutExt",
-    "sass": "sass --style expanded",
-    "scala": "scala",
-    "scheme": "csi -script",
-    "scss": "scss --style expanded",
-    "shellscript": "bash",
-    "sml": "cd $dir && sml $fileName",
-    "swift": "swift",
-    "typescript": "ts-node",
-    "v": "v run",
-    "vbscript": "cscript //Nologo",
-    "zig": "zig run"
-  },
-  "cursor.cpp.disabledLanguages": [
-    "plaintext",
-    "markdown",
-    "scminput",
-    "jsonc"
-  ],
-  "code-runner.runInTerminal": true
+    "*.css": "tailwindcss",
+    "vector": "cpp"
+  }
 }
